# awscli-sync

./: Cargo.toml  LICENSE  README.md
src/: main.rs
