[package]
name = "awscli-pull"
version = "0.1.0"
edition = "2018"
authors = ["David Bell <david@dbell.dev>"]
license = "MIT"
repository = "https://github.com/dastbe/awscli-pull"
description = """
A CLI for syncing the latest AWS SDK locally
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
